<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@drawable/bg2">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/explanationText"
            android:text="@string/now_playing_explanation"/>
    <ImageView
        android:src="@drawable/music"
        style="@style/nowPlayingTopImage" />
        <TextView
            android:text="@string/artist_name"
            style="@style/nowPlayingSongInfo" />
        <TextView
            android:id="@+id/playingNowSongName"
            android:text="@string/song_name"
            style="@style/nowPlayingSongInfo" />
        <TextView
            android:text="@string/album"
            style="@style/nowPlayingSongInfo" />
        <LinearLayout style="@style/nowPlayingControlsBox">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/backward"/>
            <ImageView
                android:id="@+id/playButton"
                android:src="@drawable/play"
                style="@style/nowPlayingPlayButton" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/forward"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/viewArtists"
                android:text="@string/view_artists"
                style="@style/buttonStyle" />

            <Button
                android:id="@+id/viewAlbums"
                android:text="@string/view_albums"
                style="@style/buttonStyle" />

            <Button
                android:id="@+id/viewSongs"
                android:text="@string/view_songs"
                style="@style/buttonStyle" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
